po: update po/sr_RS@latin/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/admin.po
+++ b/po/sr_RS@latin/admin.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-27 18:41+0000\n"
+"PO-Revision-Date: 2016-10-31 16:18+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -600,16 +600,16 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Address.php
 msgid "Settings - Addresses"
-msgstr ""
+msgstr "Podešavanja - adrese"
 
 #: CRM/Admin/Form/Preferences/Address.php
 msgid "Display Format"
-msgstr ""
+msgstr "Format prikaza"
 
 #: CRM/Admin/Form/Preferences/Address.php
 #: templates/CRM/Admin/Form/Preferences/Address.tpl
 msgid "Web Service URL"
-msgstr ""
+msgstr "URL veb servisa"
 
 #: CRM/Admin/Form/Preferences/Address.php
 msgid "Address Standardization features require PHP version 5 or greater."
@@ -617,7 +617,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Address.php
 msgid "You must provide values for all three Address Standarization fields."
-msgstr ""
+msgstr "Morate upisati vrednost u sva tri polja za standardizaciju adrese."
 
 #: CRM/Admin/Form/Preferences/Address.php
 msgid ""
@@ -632,7 +632,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Campaign.php
 msgid "CiviCampaign Component Settings"
-msgstr ""
+msgstr "Podešavanje CiviCampaign komponenata"
 
 #: CRM/Admin/Form/Preferences/Campaign.php
 msgid "Tag for Unconfirmed Petition Signers"
@@ -657,7 +657,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "CiviContribute Component Settings"
-msgstr ""
+msgstr "Podešavanja CiviContribute komponente"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Invoice Prefix"
@@ -693,7 +693,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Automatically email invoice when user purchases online"
-msgstr ""
+msgstr "Automatski pošalji profakturu imejlom kada korisnik kupuje onlajn"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Tax Term"
@@ -757,7 +757,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Event.php
 msgid "CiviEvent Component Settings"
-msgstr ""
+msgstr "Podešavanja CiviEvent komponente"
 
 #: CRM/Admin/Form/Preferences/Event.php
 msgid "Use Shopping Cart Style Event Registration"
@@ -775,7 +775,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Event.php
 msgid "Dashboard entries"
-msgstr ""
+msgstr "Unosi za kontrolnu tablu"
 
 #: CRM/Admin/Form/Preferences/Event.php
 msgid ""
@@ -865,7 +865,7 @@ msgid ""
 "guard which facilitate compliance with the US CAN-SPAM Act. They should only"
 " be disabled if your organization adopts other mechanisms for compliance or "
 "if your organization is not subject to CAN-SPAM."
-msgstr ""
+msgstr "Ne proveravaj da li su prisutni obavezni tokeni (adresa domena, odjava/isključenje sa mejling liste) pre slanja mejlinga. UPOZORENJE: Obavezni tokeni su zaštita koja podržava poštovanje US CAN-SPAM akta. Tokeni mogu biti isključeni ukolko je vaša organizacija usvojila druge mehanizme ili ukoliko vaša organizacija ne podleže ovom zakonu/aktu."
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "CiviMail dedupes e-mail addresses by default"
@@ -883,7 +883,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Member.php
 msgid "CiviMember Component Settings"
-msgstr ""
+msgstr "Podešavanja CiviMember komponente"
 
 #: CRM/Admin/Form/Preferences/Member.php
 msgid "Default online membership renewal page"
@@ -900,11 +900,11 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Multisite.php
 msgid "Multi Site Settings"
-msgstr ""
+msgstr "Multi sajt podešavanja"
 
 #: CRM/Admin/Form/Preferences/Multisite.php
 msgid "Enable Multi Site Configuration"
-msgstr ""
+msgstr "Uključi Multi sajt konfiguraciju"
 
 #: CRM/Admin/Form/Preferences/Multisite.php
 msgid ""
@@ -939,7 +939,7 @@ msgstr ""
 
 #: CRM/Admin/Form/PreferencesDate.php
 msgid "Value must be an integer."
-msgstr ""
+msgstr "Uneta vrednost mora biti ceo broj."
 
 #: CRM/Admin/Form/PreferencesDate.php
 msgid "Time is required for this format."
@@ -1211,7 +1211,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Available Currencies"
-msgstr ""
+msgstr "Dostupne valute"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Legacy Encoding"
@@ -1444,7 +1444,7 @@ msgstr "Odaberi mejler"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Settings - Outbound Mail"
-msgstr ""
+msgstr "Podešavanja - odlazna pošta"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Sendmail Path"
@@ -1485,7 +1485,7 @@ msgstr "Izabrali ste opciju \"Isključi odlazne imejlove\". Test imejl ne može 
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Email Disabled"
-msgstr ""
+msgstr "Imejl isključen"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "You have selected \"Redirect to Database\". A test email can not be sent."
@@ -1499,13 +1499,13 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Sending test email. FROM: %1 TO: %2.<br />"
-msgstr ""
+msgstr "Slanje test imejla. OD: %1 do %2.<br />"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid ""
 "Your %1 settings are correct. A test email has been sent to your email "
 "address."
-msgstr ""
+msgstr "Vaša podešavanja za %1 su tačna. Test imejl je poslat na vašu imejl adresu."
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Mail Sent"
@@ -1513,7 +1513,7 @@ msgstr "Mejl poslat"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Oops. Your %1 settings are incorrect. No test mail has been sent."
-msgstr ""
+msgstr "Ups. Vaša podešavanja za %1 nisu tačna. Test imejl nije poslat."
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Mail Not Sent"
@@ -1541,7 +1541,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/UpdateConfigBackend.php
 msgid "New Site Name"
-msgstr ""
+msgstr "Ime novog sajta"
 
 #: CRM/Admin/Form/Setting/UpdateConfigBackend.php
 msgid "%1 directory does not exist or cannot be written by webserver"
@@ -1577,7 +1577,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Verify SSL Certs"
-msgstr ""
+msgstr "Verifikuj SSL sertifikate"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid ""
@@ -1601,7 +1601,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Tag.php
 msgid "Selectable?"
-msgstr ""
+msgstr "Moguće izabrati?"
 
 #: CRM/Admin/Form/Tag.php
 msgid "The tag '%1' has been deleted."
@@ -1863,11 +1863,11 @@ msgstr "Preuzmi ekstenziju"
 
 #: CRM/Admin/Page/Extensions.php
 msgid "Disabled (Missing)"
-msgstr ""
+msgstr "Isključeno (nedostaje)"
 
 #: CRM/Admin/Page/Extensions.php
 msgid "Enabled (Missing)"
-msgstr ""
+msgstr "Uključeno (nedostaje)"
 
 #: CRM/Admin/Page/ExtensionsUpgrade.php
 msgid "Database Upgrades"
@@ -1887,7 +1887,7 @@ msgstr ""
 
 #: CRM/Admin/Page/Job.php
 msgid "Execute Now"
-msgstr ""
+msgstr "Uradi odmah"
 
 #: CRM/Admin/Page/Job.php
 msgid "Execute Scheduled Job Now"
@@ -2220,7 +2220,7 @@ msgstr ""
 
 #: ang/crmCxn/Connectivity.html
 msgid "See also:"
-msgstr ""
+msgstr "Vidi još:"
 
 #: ang/crmCxn/Connectivity.html
 msgid "Firewalls and Proxies"
@@ -2234,7 +2234,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Existing Connections"
-msgstr ""
+msgstr "Postojeće veze"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: About"
@@ -2258,7 +2258,7 @@ msgstr "%1: Dokumentacija (Eksterna)"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Docs"
-msgstr ""
+msgstr "Dokumenti"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Support (External)"
@@ -2354,11 +2354,11 @@ msgstr "Otvaranje..."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "External Link"
-msgstr ""
+msgstr "Eksterni link"
 
 #: ang/crmCxn/PermTable.html
 msgid "Action(s)"
-msgstr ""
+msgstr "Akcija(akcije)"
 
 #: ang/crmCxn/PermTable.html
 msgid "Filter(s)"
@@ -2399,7 +2399,7 @@ msgstr "Bekap baze podataka"
 
 #: templates/CRM/Admin/Form/DomainDump.tpl
 msgid "Backup Your Data:"
-msgstr ""
+msgstr "Bekap podataka:"
 
 #: templates/CRM/Admin/Form/DomainDump.tpl
 msgid ""
@@ -2426,7 +2426,7 @@ msgstr ""
 msgid ""
 "Installing this extension will provide you with new functionality. Please "
 "make sure that the extension you're installing comes from a trusted source."
-msgstr ""
+msgstr "Instalacija ove ekstenzije će vam obebediti dodatnu funkcionalnost. Proverite da li ekstenzija koju instalirate dolazi od pouzdanog izvora."
 
 #: templates/CRM/Admin/Form/Extensions.tpl
 msgid ""
@@ -2525,7 +2525,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/MailSettings.tpl
 msgid "Email address domain (the part after @)."
-msgstr ""
+msgstr "Domen imejl adrese (deo posle @)."
 
 #: templates/CRM/Admin/Form/MailSettings.tpl
 msgid "Contents of the Return-Path header."
@@ -2753,20 +2753,20 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/ParticipantStatusType.tpl
 msgid "New Participant Status"
-msgstr ""
+msgstr "Novi status učesnika"
 
 #: templates/CRM/Admin/Form/ParticipantStatusType.tpl
 msgid "Edit Participant Status"
-msgstr ""
+msgstr "Uredi status učesnika"
 
 #: templates/CRM/Admin/Form/ParticipantStatusType.tpl
 msgid "Delete Participant Status"
-msgstr ""
+msgstr "Obriši status učesnika"
 
 #: templates/CRM/Admin/Form/ParticipantStatusType.tpl
 msgid ""
 "WARNING: Deleting this Participant Status will remove all of its settings."
-msgstr ""
+msgstr "UPOZORENJE: Brisanjem statusa učesnika se brišu i sva podešavanja za ovaj status."
 
 #: templates/CRM/Admin/Form/ParticipantStatusType.tpl
 msgid "Name of this status type, for use in the code."
@@ -2838,7 +2838,7 @@ msgstr ""
 msgid ""
 "WARNING: You are about to delete the PDF Page Format titled "
 "<strong>%1</strong>."
-msgstr ""
+msgstr "UPOZORENJE: Brišete format PDF stranice pod nazivom <strong>%1</strong>."
 
 #: templates/CRM/Admin/Form/PdfFormats.tpl
 msgid ""
@@ -3024,7 +3024,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Preferences/Address.tpl
 msgid "Address Standardization"
-msgstr ""
+msgstr "Standardizacija adrese"
 
 #: templates/CRM/Admin/Form/Preferences/Address.tpl
 msgid ""
@@ -3044,11 +3044,11 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Preferences/Address.tpl
 msgid "Address Standardization Provider."
-msgstr ""
+msgstr "Provajder standardizacije adrese."
 
 #: templates/CRM/Admin/Form/Preferences/Address.tpl
 msgid "Web service user ID."
-msgstr ""
+msgstr "Korisnički ID veb servisa"
 
 #: templates/CRM/Admin/Form/Preferences/Display.hlp
 #: templates/CRM/Admin/Form/Preferences/Display.tpl
@@ -3208,7 +3208,7 @@ msgstr ""
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid ""
 "WARNING: You are about to delete the Reminder titled <strong>%1</strong>."
-msgstr ""
+msgstr "UPOZORENJE: Brišete podsetnik pod nazivom <strong>%1</strong>."
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "Enable repetition."
@@ -3377,7 +3377,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Date.hlp
 msgid "year as a decimal number including the century ('2015')"
-msgstr ""
+msgstr "godina kao decimalni broj ('2015')"
 
 #: templates/CRM/Admin/Form/Setting/Date.tpl
 msgid ""
