po: update po/sr_RS@latin/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/common-base.po
+++ b/po/sr_RS@latin/common-base.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-28 10:33+0000\n"
+"PO-Revision-Date: 2016-10-31 17:35+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -48,7 +48,7 @@ msgstr "Grupa kontakata"
 
 #: CRM/ACL/BAO/ACL.php
 msgid "Import"
-msgstr ""
+msgstr "Import"
 
 #: CRM/ACL/BAO/ACL.php CRM/Activity/Selector/Activity.php
 #: CRM/Contact/BAO/Contact/Utils.php CRM/Contact/Page/View/Note.php
@@ -349,11 +349,11 @@ msgstr ""
 
 #: CRM/ACL/Form/ACL.php
 msgid "Please select a Group (or ALL Groups)."
-msgstr ""
+msgstr "Izaberite grupu (ili SVE grupe)."
 
 #: CRM/ACL/Form/ACL.php
 msgid "Please select a Profile (or ALL Profiles)."
-msgstr ""
+msgstr "Izaberite profil (ili SVE profile)."
 
 #: CRM/ACL/Form/ACL.php
 msgid "Please select a set of Custom Data (or ALL Custom Data)."
