po: update po/sr_RS@latin/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/report.po
+++ b/po/sr_RS@latin/report.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-31 08:03+0000\n"
+"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -136,7 +137,7 @@ msgstr ""
 #: CRM/Report/Form/Activity.php CRM/Report/Form/Contribute/TopDonor.php
 #: CRM/Report/Form.php
 msgid "Contacts Added"
-msgstr ""
+msgstr "Kontakti dodati"
 
 #: CRM/Report/Form/Activity.php CRM/Report/Form.php
 msgid "The listed records(s) cannot be added to the group."
@@ -158,7 +159,7 @@ msgstr ""
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "Total Duration"
-msgstr ""
+msgstr "Ukupno trajanje"
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "Activity Count"
@@ -202,7 +203,7 @@ msgstr ""
 
 #: CRM/Report/Form/Case/Demographics.php
 msgid "Birthdate"
-msgstr ""
+msgstr "Datum rođenja"
 
 #: CRM/Report/Form/Case/Demographics.php
 msgid "Case Start"
@@ -237,7 +238,7 @@ msgstr ""
 
 #: CRM/Report/Form/Case/Detail.php CRM/Report/Form/Case/Summary.php
 msgid "Deleted?"
-msgstr ""
+msgstr "Obrisan?"
 
 #: CRM/Report/Form/Case/Detail.php
 msgid "Case Role(s)"
@@ -277,7 +278,7 @@ msgstr ""
 
 #: CRM/Report/Form/Case/Summary.php CRM/Report/Form/Extended.php
 msgid "Duration (Days)"
-msgstr ""
+msgstr "Trajanje (dana)"
 
 #: CRM/Report/Form/Case/Summary.php
 msgid "Staff Member"
@@ -305,7 +306,7 @@ msgstr ""
 
 #: CRM/Report/Form/Case/TimeSpent.php
 msgid "Month/Year"
-msgstr ""
+msgstr "Mesec/godina"
 
 #: CRM/Report/Form/Case/TimeSpent.php
 msgid "# Activities"
@@ -317,15 +318,15 @@ msgstr ""
 
 #: CRM/Report/Form/Contact/CurrentEmployer.php
 msgid "Employer Name"
-msgstr ""
+msgstr "Ime poslodavca"
 
 #: CRM/Report/Form/Contact/CurrentEmployer.php
 msgid "Employee Name"
-msgstr ""
+msgstr "Ime zaposlenog"
 
 #: CRM/Report/Form/Contact/CurrentEmployer.php
 msgid "Employee Since"
-msgstr ""
+msgstr "Zaposlen od"
 
 #: CRM/Report/Form/Contact/Detail.php CRM/Report/Form/Contact/Summary.php
 #: CRM/Report/Form/Contribute/Bookkeeping.php
@@ -338,7 +339,7 @@ msgstr ""
 #: CRM/Report/Form/Event/ParticipantListing.php CRM/Report/Form/Extended.php
 #: CRM/Report/Form/Member/Detail.php
 msgid "Last Name, First Name"
-msgstr ""
+msgstr "Prezime, ime"
 
 #: CRM/Report/Form/Contact/Detail.php
 msgid "Relationship With"
@@ -785,7 +786,7 @@ msgstr ""
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "New Donor"
-msgstr ""
+msgstr "Novi donator"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "View contributions for this Country."
@@ -887,7 +888,7 @@ msgstr ""
 
 #: CRM/Report/Form/Contribute/TopDonor.php
 msgid "Donations"
-msgstr ""
+msgstr "Donacije"
 
 #: CRM/Report/Form/Contribute/TopDonor.php
 msgid "Show no. of Top Donors"
@@ -912,33 +913,33 @@ msgstr ""
 #: CRM/Report/Form/Event/IncomeCountSummary.php
 #: CRM/Report/Form/Event/Summary.php CRM/Report/Form/Extended.php
 msgid "Capacity"
-msgstr ""
+msgstr "Kapacitet"
 
 #: CRM/Report/Form/Event/IncomeCountSummary.php
 msgid "Income Statistics"
-msgstr ""
+msgstr "Prihod-statistike"
 
 #: CRM/Report/Form/Event/IncomeCountSummary.php
 #: CRM/Report/Form/Event/ParticipantListCount.php
 msgid "Income"
-msgstr ""
+msgstr "Prihod"
 
 #: CRM/Report/Form/Event/IncomeCountSummary.php
 msgid "View Event Participants For this Event"
-msgstr ""
+msgstr "Vidi učesnike za ovaj događaj"
 
 #: CRM/Report/Form/Event/ParticipantListCount.php
 #: CRM/Report/Form/Event/ParticipantListing.php
 msgid "Participant E-mail"
-msgstr ""
+msgstr "Imejl učesnika"
 
 #: CRM/Report/Form/Event/ParticipantListCount.php
 msgid "Phone No"
-msgstr ""
+msgstr "Broj telefona"
 
 #: CRM/Report/Form/Event/ParticipantListCount.php
 msgid "Event Type "
-msgstr ""
+msgstr "Tip događaja"
 
 #: CRM/Report/Form/Event/ParticipantListCount.php
 #: CRM/Report/Form/Event/ParticipantListing.php
@@ -953,17 +954,17 @@ msgstr ""
 #: CRM/Report/Form/Event/ParticipantListCount.php
 #: CRM/Report/Form/Event/ParticipantListing.php
 msgid "One"
-msgstr ""
+msgstr "Jedan"
 
 #: CRM/Report/Form/Event/ParticipantListCount.php
 #: CRM/Report/Form/Event/ParticipantListing.php
 msgid "Two"
-msgstr ""
+msgstr "Dva"
 
 #: CRM/Report/Form/Event/ParticipantListCount.php
 #: CRM/Report/Form/Event/ParticipantListing.php
 msgid "Three"
-msgstr ""
+msgstr "Tri"
 
 #: CRM/Report/Form/Event/ParticipantListCount.php
 msgid "View Participant Record for this Contact."
@@ -976,7 +977,7 @@ msgstr ""
 
 #: CRM/Report/Form/Event/ParticipantListing.php
 msgid "Payment Date"
-msgstr ""
+msgstr "Datum plaćanja"
 
 #: CRM/Report/Form/Event/ParticipantListing.php
 msgid "Transaction Fee"
@@ -1037,19 +1038,19 @@ msgstr ""
 
 #: CRM/Report/Form/Extended.php CRM/Report/Form.php
 msgid "%1 for this country."
-msgstr ""
+msgstr "%1 za ovu zemlju."
 
 #: CRM/Report/Form/Extended.php CRM/Report/Form.php
 msgid "%1 for this county."
-msgstr ""
+msgstr "%1 za ovaj okrug."
 
 #: CRM/Report/Form/Extended.php CRM/Report/Form.php
 msgid "%1 for this state."
-msgstr ""
+msgstr "%1 za ovu državu."
 
 #: CRM/Report/Form/Grant/Detail.php
 msgid "Money Transfer Date"
-msgstr ""
+msgstr "Datum transfera novca"
 
 #: CRM/Report/Form/Grant/Detail.php
 msgid "Grant Decision Date"
@@ -1074,15 +1075,15 @@ msgstr ""
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "By Grant Type"
-msgstr ""
+msgstr "Po tipu granta"
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "By Gender"
-msgstr ""
+msgstr "Po polu"
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "By Contact Type"
-msgstr ""
+msgstr "Po tipu kontakta"
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "By World Region"
@@ -1098,7 +1099,7 @@ msgstr ""
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "By %1"
-msgstr ""
+msgstr "Po %1"
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "Grant Requests Received"
@@ -1114,7 +1115,7 @@ msgstr ""
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "Number of Grants"
-msgstr ""
+msgstr "Broj grantova"
 
 #: CRM/Report/Form/Instance.php
 msgid "You do not have permission to access this report."
@@ -1122,7 +1123,7 @@ msgstr ""
 
 #: CRM/Report/Form/Instance.php
 msgid "Report Description"
-msgstr ""
+msgstr "Opis izveštaja"
 
 #: CRM/Report/Form/Instance.php
 msgid "Limit Dashboard Results"
@@ -1146,11 +1147,11 @@ msgstr ""
 
 #: CRM/Report/Form/Instance.php
 msgid "Reserved Report?"
-msgstr ""
+msgstr "Rezervisan izveštaj?"
 
 #: CRM/Report/Form/Instance.php
 msgid "Everyone (includes anonymous)"
-msgstr ""
+msgstr "Svi (uključuje i anonimne)"
 
 #: CRM/Report/Form/Instance.php
 msgid "ACL Group/Role"
@@ -1162,17 +1163,17 @@ msgstr ""
 
 #: CRM/Report/Form/Instance.php
 msgid "Save Report"
-msgstr ""
+msgstr "Snimi izveštaj"
 
 #: CRM/Report/Form/Instance.php
 msgid "\"%1\" report has been updated."
-msgstr ""
+msgstr "\"%1\" izveštaj je ažriran."
 
 #: CRM/Report/Form/Instance.php
 msgid ""
 "Your report has been successfully copied as \"%1\". You are currently "
 "viewing the new copy."
-msgstr ""
+msgstr "Vaš izveštaj je uspešno kopiran kao \"%1\". Trenutno gledate kopiju."
 
 #: CRM/Report/Form/Instance.php
 msgid ""
@@ -1202,7 +1203,7 @@ msgstr ""
 
 #: CRM/Report/Form/Mailing/Clicks.php
 msgid "Clicks: %1"
-msgstr ""
+msgstr "Klikovi: %1"
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Unsubscribed"
@@ -1218,11 +1219,11 @@ msgstr ""
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Forwarded to Email"
-msgstr ""
+msgstr "Prosleđeno na imejl"
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Forwarded"
-msgstr ""
+msgstr "Prosleđeno"
 
 #: CRM/Report/Form/Mailing/Opened.php
 msgid "Opened Count"
@@ -1234,11 +1235,11 @@ msgstr ""
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Date Created"
-msgstr ""
+msgstr "Datum kreiranja"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Delivered"
-msgstr ""
+msgstr "Dostavljeno"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Accepted Rate"
@@ -1270,7 +1271,7 @@ msgstr ""
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Statistics"
-msgstr ""
+msgstr "Statistike"
 
 #: CRM/Report/Form/Member/ContributionDetail.php
 msgid "No Bulk Email(Is Opt Out)"
@@ -1336,7 +1337,7 @@ msgstr ""
 
 #: CRM/Report/Form/Member/Summary.php
 msgid "Total Members"
-msgstr ""
+msgstr "Ukupno članova"
 
 #: CRM/Report/Form/Member/Summary.php
 msgid "Lists Summary of Memberships for this date unit."
@@ -1384,7 +1385,7 @@ msgstr ""
 
 #: CRM/Report/Form/Pledge/Summary.php
 msgid "email"
-msgstr ""
+msgstr "imejl"
 
 #: CRM/Report/Form/Pledge/Summary.php
 msgid "Aggregate Amount Pledged"
@@ -1416,51 +1417,51 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "January"
-msgstr ""
+msgstr "Januar"
 
 #: CRM/Report/Form.php
 msgid "February"
-msgstr ""
+msgstr "Februar"
 
 #: CRM/Report/Form.php
 msgid "March"
-msgstr ""
+msgstr "Mart"
 
 #: CRM/Report/Form.php
 msgid "April"
-msgstr ""
+msgstr "April"
 
 #: CRM/Report/Form.php
 msgid "May"
-msgstr ""
+msgstr "Maj"
 
 #: CRM/Report/Form.php
 msgid "June"
-msgstr ""
+msgstr "Jun"
 
 #: CRM/Report/Form.php
 msgid "July"
-msgstr ""
+msgstr "Jul"
 
 #: CRM/Report/Form.php
 msgid "August"
-msgstr ""
+msgstr "Avgust"
 
 #: CRM/Report/Form.php
 msgid "September"
-msgstr ""
+msgstr "Septembar"
 
 #: CRM/Report/Form.php
 msgid "October"
-msgstr ""
+msgstr "Oktobar"
 
 #: CRM/Report/Form.php
 msgid "November"
-msgstr ""
+msgstr "Novembar"
 
 #: CRM/Report/Form.php
 msgid "December"
-msgstr ""
+msgstr "Decembar"
 
 #: CRM/Report/Form.php
 msgid "Operator:"
@@ -1468,11 +1469,11 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Min"
-msgstr ""
+msgstr "Min"
 
 #: CRM/Report/Form.php
 msgid "Filters"
-msgstr ""
+msgstr "Filteri"
 
 #: CRM/Report/Form.php
 msgid "Display Options"
@@ -1484,11 +1485,11 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Group by columns"
-msgstr ""
+msgstr "Grupiši po kolonama"
 
 #: CRM/Report/Form.php
 msgid "Sorting"
-msgstr ""
+msgstr "Sortiranje"
 
 #: CRM/Report/Form.php
 msgid "Order by Section"
@@ -1500,11 +1501,11 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Update Report"
-msgstr ""
+msgstr "Ažuriraj izveštaj"
 
 #: CRM/Report/Form.php
 msgid "PDF"
-msgstr ""
+msgstr "PDF"
 
 #: CRM/Report/Form.php
 msgid "Print Preview"
@@ -1524,43 +1525,43 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Is less than or equal to"
-msgstr ""
+msgstr "je manje ili jednako od"
 
 #: CRM/Report/Form.php
 msgid "Is greater than or equal to"
-msgstr ""
+msgstr "je veće ili jednako od"
 
 #: CRM/Report/Form.php
 msgid "Is between"
-msgstr ""
+msgstr "je između"
 
 #: CRM/Report/Form.php
 msgid "Is equal to"
-msgstr ""
+msgstr "je jednako"
 
 #: CRM/Report/Form.php
 msgid "Is less than"
-msgstr ""
+msgstr "je manje od"
 
 #: CRM/Report/Form.php
 msgid "Is greater than"
-msgstr ""
+msgstr "je veće od"
 
 #: CRM/Report/Form.php
 msgid "Is not equal to"
-msgstr ""
+msgstr "nije jednako"
 
 #: CRM/Report/Form.php
 msgid "Is not between"
-msgstr ""
+msgstr "nije između"
 
 #: CRM/Report/Form.php
 msgid "Is empty (Null)"
-msgstr ""
+msgstr "je prazno (null)"
 
 #: CRM/Report/Form.php
 msgid "Is not empty (Null)"
-msgstr ""
+msgstr "nije prazno (null)"
 
 #: CRM/Report/Form.php
 msgid "Is one of"
@@ -1572,23 +1573,23 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Contains"
-msgstr ""
+msgstr "Sadrži"
 
 #: CRM/Report/Form.php
 msgid "Starts with"
-msgstr ""
+msgstr "Počinje sa"
 
 #: CRM/Report/Form.php
 msgid "Ends with"
-msgstr ""
+msgstr "Završava se sa"
 
 #: CRM/Report/Form.php
 msgid "Does not contain"
-msgstr ""
+msgstr "Ne sadrži"
 
 #: CRM/Report/Form.php
 msgid "Total Row(s)"
-msgstr ""
+msgstr "Ukupno redova"
 
 #: CRM/Report/Form.php
 msgid "Grouping(s)"
@@ -1596,27 +1597,27 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Between %1 and %2"
-msgstr ""
+msgstr "Između %1 i %2"
 
 #: CRM/Report/Form.php
 msgid "Is Not"
-msgstr ""
+msgstr "Nije"
 
 #: CRM/Report/Form.php
 msgid "Is"
-msgstr ""
+msgstr "Jeste"
 
 #: CRM/Report/Form.php
 msgid "Report URL"
-msgstr ""
+msgstr "URL izveštaja"
 
 #: CRM/Report/Form.php
 msgid "The report is attached as a CSV file."
-msgstr ""
+msgstr "Izveštaj je u prilogu kao CSV fajl."
 
 #: CRM/Report/Form.php
 msgid "The report is attached as a PDF file."
-msgstr ""
+msgstr "Izveštaj je u prilogu kao PDF fajl."
 
 #: CRM/Report/Form.php
 msgid "Report mail has been sent."
@@ -1648,7 +1649,7 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Nick Name"
-msgstr ""
+msgstr "Nadimak"
 
 #: CRM/Report/Form.php
 msgid "Contact Suffix"
@@ -1728,11 +1729,11 @@ msgstr ""
 
 #: CRM/Report/Page/InstanceList.php
 msgid "New %1 Report"
-msgstr ""
+msgstr "Novi %1 izveštaj"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "New Report"
-msgstr ""
+msgstr "Novi izveštaj"
 
 #: CRM/Report/Page/Options.php
 msgid "Registered Templates"
@@ -1754,7 +1755,7 @@ msgstr ""
 
 #: templates/CRM/Report/Form/Actions.tpl
 msgid "Add all contacts to %1 group?"
-msgstr ""
+msgstr "Dodaj sve kontakte u grupu %1?"
 
 #: templates/CRM/Report/Form/Campaign/SurveyCoverSheet.tpl
 msgid "Cover Sheet for %1"
@@ -1790,7 +1791,7 @@ msgstr ""
 
 #: templates/CRM/Report/Form/Fields.tpl
 msgid "Access"
-msgstr ""
+msgstr "Pristup"
 
 #: templates/CRM/Report/Form/Grant/Statistics.tpl
 msgid "Report Filters"
@@ -1798,7 +1799,7 @@ msgstr ""
 
 #: templates/CRM/Report/Form/Grant/Statistics.tpl
 msgid "All Grants"
-msgstr ""
+msgstr "Svi grantovi"
 
 #: templates/CRM/Report/Form/Grant/Statistics.tpl
 msgid "Statistics Breakdown"
