po: update po/pt_BR/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/mailing.po
+++ b/po/pt_BR/mailing.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-26 15:35+0000\n"
+"PO-Revision-Date: 2016-11-01 15:12+0000\n"
 "Last-Translator: Débora Maia <debora@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -287,7 +287,7 @@ msgstr "Data programada do e-mail em massa"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Approved By"
-msgstr ""
+msgstr "Aprovado Por"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Approved Date"
